--- a/package.json
+++ b/package.json
@@ -11,14 +11,17 @@
   "dependencies": {
     "@expo/metro-runtime": "~3.2.1",
     "@expo/vector-icons": "^14.0.2",
+    "axios": "^1.6.8",
     "expo": "~51.0.2",
     "expo-av": "~14.0.4",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.1",
+    "react-native-autoheight-webview": "^1.6.5",
     "react-native-swiper": "^1.6.0",
-    "react-native-web": "~0.19.10"
+    "react-native-web": "~0.19.10",
+    "rn-fetch-blob": "^0.12.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
