--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "^0.74.1",
+    "react-native-calendars": "^1.1305.0",
     "react-native-gesture-handler": "^2.16.2",
     "react-native-modal-dropdown": "^1.0.2",
     "react-native-reanimated": "^3.11.0",
