--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-community/netinfo": "^11.3.2",
+    "@react-native-picker/picker": "^2.7.7",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/material-top-tabs": "^6.6.13",
     "@react-navigation/native": "^6.1.17",
@@ -26,7 +27,10 @@
     "react-dom": "18.2.0",
     "react-native": "^0.74.1",
     "react-native-calendars": "^1.1305.0",
+    "react-native-country-picker-modal": "^2.0.0",
+    "react-native-date-picker": "^5.0.4",
     "react-native-gesture-handler": "^2.16.2",
+    "react-native-modal-datetime-picker": "^17.1.0",
     "react-native-modal-dropdown": "^1.0.2",
     "react-native-reanimated": "^3.11.0",
     "react-native-safe-area-context": "^4.10.1",
