--- a/package.json
+++ b/package.json
@@ -13,13 +13,13 @@
     "@expo/vector-icons": "^14.0.2",
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-community/masked-view": "^0.1.11",
-    "@react-native-community/netinfo": "^11.3.2",
-    "@react-native-picker/picker": "^2.7.7",
+    "@react-native-community/netinfo": "^11.3.1",
+    "@react-native-picker/picker": "^2.7.5",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/material-top-tabs": "^6.6.13",
     "@react-navigation/native": "^6.1.17",
     "axios": "^1.6.8",
-    "expo": "~51.0.2",
+    "expo": "~51.0.17",
     "expo-av": "~14.0.4",
     "expo-location": "^17.0.1",
     "expo-status-bar": "~1.12.1",
@@ -27,6 +27,7 @@
     "react-dom": "18.2.0",
     "react-native": "^0.74.1",
     "react-native-calendars": "^1.1305.0",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-country-picker-modal": "^2.0.0",
     "react-native-date-picker": "^5.0.4",
     "react-native-gesture-handler": "^2.16.2",
