--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "expo-av": "~14.0.4",
     "expo-location": "^17.0.1",
     "expo-status-bar": "~1.12.1",
+    "moment": "^2.30.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "^0.74.1",
