--- a/app.json
+++ b/app.json
@@ -29,6 +29,7 @@
       "eas": {
         "projectId": "02a46bb7-4887-4c46-9e7f-b18753b44103"
       }
-    }
+    },
+    "owner": "timofey_savinich"
   }
 }
