--- a/package.json
+++ b/package.json
@@ -19,14 +19,14 @@
     "@react-navigation/material-top-tabs": "^6.6.13",
     "@react-navigation/native": "^6.1.17",
     "axios": "^1.6.8",
-    "expo": "~51.0.17",
-    "expo-av": "~14.0.4",
+    "expo": "~51.0.21",
+    "expo-av": "~14.0.6",
     "expo-location": "^17.0.1",
     "expo-status-bar": "~1.12.1",
     "moment": "^2.30.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "^0.74.1",
+    "react-native": "0.74.3",
     "react-native-calendars": "^1.1305.0",
     "react-native-chart-kit": "^6.12.0",
     "react-native-country-picker-modal": "^2.0.0",
@@ -34,8 +34,8 @@
     "react-native-gesture-handler": "^2.16.2",
     "react-native-modal-datetime-picker": "^17.1.0",
     "react-native-modal-dropdown": "^1.0.2",
-    "react-native-reanimated": "^3.11.0",
-    "react-native-safe-area-context": "^4.10.1",
+    "react-native-reanimated": "~3.10.1",
+    "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "^3.31.1",
     "react-native-swiper": "^1.6.0",
     "react-native-vector-icons": "^10.1.0",
