--- a/package.json
+++ b/package.json
@@ -42,8 +42,7 @@
     "react-native-web": "~0.19.10"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "react-native-svg-transformer": "^1.3.0"
+    "@babel/core": "^7.20.0"
   },
   "private": true
 }
