--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "react-native-chart-kit": "^6.12.0",
     "react-native-country-picker-modal": "^2.0.0",
     "react-native-date-picker": "^5.0.4",
-    "react-native-gesture-handler": "^2.16.2",
+    "react-native-gesture-handler": "~2.16.1",
     "react-native-modal-datetime-picker": "^17.1.0",
     "react-native-modal-dropdown": "^1.0.2",
     "react-native-reanimated": "~3.10.1",
