--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-dom": "18.2.0",
     "react-native": "0.74.3",
     "react-native-calendars": "^1.1305.0",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-country-picker-modal": "^2.0.0",
     "react-native-date-picker": "^5.0.4",
     "react-native-gesture-handler": "~2.16.1",
